// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileAttachmentContainer no props 1`] = `
<div>
  <div
    class="file-upload--container block"
  >
    <label
      class="file-upload--label"
      for="fileUpload"
    >
      <i
        aria-hidden="true"
        class="fa fa-cloud-upload fa-2x cloud-logo"
      />
    </label>
    <input
      class="file-upload--input"
      id="fileUpload"
      name="fileUpload"
      type="file"
    />
  </div>
  <div
    class="file-upload--file-entry-listing"
  />
</div>
`;

exports[`FileAttachmentContainer with attributes 1`] = `
<div>
  <div
    class="file-upload--container block file-upload--container--compact"
  >
    <label
      class="file-upload--label--compact"
      for="fileUpload1"
    >
      <i
        aria-hidden="true"
        class="fa fa-cloud-upload file-upload__label__icon"
      />
      Upload your files here please...
    </label>
    <input
      accept=".tsv, .xls, .xlsx"
      class="file-upload--input"
      id="fileUpload1"
      multiple=""
      name="fileUpload1"
      type="file"
    />
  </div>
  <div
    class="file-upload--file-entry-listing"
  />
</div>
`;
